客服插件(未修改QQ,电话号码,二维码)

--- a/website/web/index.html
+++ b/website/web/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sl-slide.css">
 
+
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
     <!-- Le fav and touch icons -->
@@ -24,6 +25,10 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+
+
+    <!-- 客服样式-->
+    <link href="service/css/lrtk.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -559,8 +564,7 @@
     <!--/Modal Body-->
 </div>
 <!--  /Login form -->
-
-<script src="js/vendor/jquery-1.9.1.min.js"></script>
+<script src="js/vendor/jquery-1.9.1.min.js"
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 <!-- Required javascript files for Slider -->
@@ -601,5 +605,9 @@ $(function() {
 });
 </script>
 <!-- /SL Slider -->
+
+<div id="izltop"></div>
+<script src="service/js/lrtk.js"></script>
+
 </body>
 </html>
