--- a/website/web/career.html
+++ b/website/web/career.html
@@ -28,48 +28,35 @@
 
 <body>
 
-  <!--Header-->
-  <header class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a id="logo" class="pull-left" href="index.html"></a>
-        <div class="nav-collapse collapse pull-right">
-          <ul class="nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="icon-angle-down"></i></a>
-              <ul class="dropdown-menu">
-                <li class="active"><a href="career.html">Career</a></li>
-                <li><a href="blog-item.html">Blog Single</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="404.html">404</a></li>
-                <li><a href="typography.html">Typography</a></li>
-                <li><a href="registration.html">Registration</a></li>
-                <li class="divider"></li>
-                <li><a href="privacy.html">Privacy Policy</a></li>
-                <li><a href="terms.html">Terms of Use</a></li>
-              </ul>
-            </li>
-            <li><a href="blog.html">Blog</a></li> 
-            <li><a href="contact-us.html">Contact</a></li>
-            <li class="login">
-              <a data-toggle="modal" href="#loginForm"><i class="icon-lock"></i></a>
-            </li>
-          </ul>        
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-  </header>
-  <!-- /header -->
+ <!--Header-->
+    <header class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <span class="pull-left topspan">为企业输送优秀软件开发人才！做良心教育，我们是认真的！</span>
+                <span class="pull-right topspan">咨询电话：0411-62666800 | 0411-62666833</span>
+            </div>
+            <div class="container">
+	            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	                <span class="icon-bar"></span>
+	            </a>
+	            <a id="logo" class="pull-left" href="index.html"></a>
+	            <div class="nav-collapse collapse pull-right">
+	                <ul class="nav">
+	                    <li class="active"><a href="index.html">首页</a></li>
+	                    <li><a href="about-us.html">知润故事|关于我们</a></li>
+	                    <li><a href="services.html">课程中心</a></li>
+	                    <li><a href="teacher.html">师资力量</a></li>
+	                    <li><a href="unclassified.html">就业展示</a></li>
+	                    <li><a href="portfolio.html">幽默谈技术</a></li>
+	                    <li><a href="contact-us.html">预约报名</a></li>
+	                 </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
+    </header>
+    <!-- /header -->
 
   <section class="title">
     <div class="container">
