--- a/website/web/contact-us.html
+++ b/website/web/contact-us.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/sl-slide.css">
+    <link rel="stylesheet" href="css/zx.css" />
 
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
@@ -132,6 +132,6 @@
 <!--/Footer-->
 <script src="js/vendor/jquery-1.9.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
-<script src="js/main.js"></script>   
+<!--<script src="js/main.js"></script>--> 
 </body>
 </html>
