--- a/website/web/teacher.html
+++ b/website/web/teacher.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/sl-slide.css">
+    <link rel="stylesheet" href="css/zx.css" />
 
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
@@ -108,9 +108,11 @@
                 <img src="images/technology/teacher_zhang.jpg"/>
 
                 <article>
-                    &emsp;&emsp;7年Java企业项目开发经验,3年Android项目开发经验,
-                    曾任大连华信第一开发部项目经理,北京德林集团煤老板网
-                    电子商务公司移动APP项目经理。善于沟通及解决问题,能耐心为学生讲解问题，
+                    &emsp;&emsp;张犇，2008年毕业于哈尔滨理工大学,软件工程专业。
+                    拥有7年Java企业项目开发经验,3年安卓项目开发经验。
+                    曾任大连华信第一开发部项目经理,北京煤老板网电子商务公司移动APP项目经理。
+                    于2017年初加入知润成为java讲师。
+                    善于沟通及解决问题,能耐心为学生讲解问题，
                     为人友善，积极乐观。
                 </article>
             </div>
@@ -135,7 +137,7 @@
                 <img src="images/technology/teacher_jiang.jpg"/>
 
                 <article>
-                    &emsp;&emsp;怀着'润物细无声，桃李满天下'的期望，
+                    &emsp;&emsp;'润物细无声，桃李满天下'。曾担任过2年UI讲师,3年WEB前端设计师。
                     2017年加入大连知润。一直致力于把自己多年丰富的开发经验和开发技巧毫无保留的传授给
                     每一位学生。
                 </article>
@@ -178,24 +180,39 @@
     </div>
 </footer>
 <!--/Footer-->
-
+<!--右边栏-->
+<div class="zx">
+	<ul>
+		<li class="li_qq">
+			<a href="http://wpa.qq.com/msgrd?v=3&uin=945618123&site=qq&menu=yes" target="_blank">
+				<p style="margin: 10px 0 0;"><i class="icon-comments-alt" style="font-size: 18px;"></i></p>
+				<p>QQ咨询</p>	
+			</a>							
+		</li>
+		<li class="li_2 li_qq">
+			<a href="contact-us.html" target="_blank"> 
+				<p style="margin: 10px 0 0;"><i class="icon-external-link" style="font-size: 18px;"></i></p>
+				<p>在线咨询</p>	 
+			</a>							 
+		</li>			
+		<li class="li_5 li_gd">
+			<p style="margin: 10px 0 0;"><i class="icon-phone" style="font-size: 18px;"></i></p>
+			<p>电话咨询</p>
+			<div style="display: none;height: 60px;">
+				<p><i class="icon-phone" style="font-size: 18px;"></i>&emsp;0411-62666800</p>
+			</div>
+		</li>
+		<li class="li_6" id="back" style="visibility: hidden;">
+			<a href="javascript:void(0);"> 
+				<p style="margin: 10px 0 0;"><i class="icon-angle-up" style="font-size: 18px;"></i></p>
+				<p>返回顶部</p>	
+			</a>						
+		</li>				
+	</ul>
+</div>
+<!--/右边栏-->
 <script src="js/vendor/jquery-1.9.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
-<!--美洽-->
-<script type='text/javascript'>
-    (function(m, ei, q, i, a, j, s) {
-        m[i] = m[i] || function() {
-            (m[i].a = m[i].a || []).push(arguments)
-        };
-        j = ei.createElement(q),
-            s = ei.getElementsByTagName(q)[0];
-        j.async = true;
-        j.charset = 'UTF-8';
-        j.src = 'https://static.meiqia.com/dist/meiqia.js?_=t';
-        s.parentNode.insertBefore(j, s);
-    })(window, document, 'script', '_MEIQIA');
-    _MEIQIA('entId', 84164);
-</script>
 </body>
 </html>
