--- a/website/web/insertTask.html
+++ b/website/web/insertTask.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="/website/task/insertWithoutId.action" method="post">
+<form action="/task/insertWithoutId.action" method="post">
 
     课程:<select name="taskName">
             <option value="训练营">训练营</option>
