可以通过网页修改试听课时间和开课时间

--- a/website/web/index.html
+++ b/website/web/index.html
@@ -176,15 +176,17 @@
                     <li class="plan-name">
                         <h3>试听班开班时间</h3>
                     </li>
-                    <li class="plan-price">
-                        <p class="fs14">2017年12月25日&emsp;&emsp;&emsp;&emsp;名额预约中</p>
-                    </li>
-                    <li class="plan-price">
-                       <p class="fs14">2017年11月27日&emsp;&emsp;&emsp;&emsp;开班试听中</p>
-                    </li>
-                   <li class="plan-price">
-                       <p class="fs14">2017年11月1日&emsp;&emsp;&emsp;&emsp;试听已结束</p>
-                    </li>
+					<div class="plan plan1" id="auditionClass">
+						<li class="plan-price">
+							<p class="fs14">2018年8月6日&emsp;&emsp;&emsp;&emsp;名额预约中</p>
+						</li>
+						<li class="plan-price">
+						   <p class="fs14">2018年7月2日&emsp;&emsp;&emsp;&emsp;开班试听中</p>
+						</li>
+					   <li class="plan-price">
+						   <p class="fs14">2018年6月4日&emsp;&emsp;&emsp;&emsp;试听已结束</p>
+						</li>
+					</div>
                     <li class="plan-action">
                         <a  target=_blank href='http://wpa.qq.com/msgrd?v=3&uin=945618123&site=qq&menu=yes' class="btn btn-transparent">QQ在线申请试听</a>
                     		&emsp;&emsp;<a  target=_blank href='contact-us.html' class="btn btn-transparent">在线客服申请试听</a>
@@ -197,15 +199,17 @@
                     <li class="plan-name">
                         <h3>当前开班进度</h3>
                     </li>
-                    <li class="plan-price">
-                        <p class="fs14">2017年12月25日&emsp;&emsp;&emsp;&emsp;名额预约中</p>
-                    </li>
-                    <li>
-                        <p class="fs14">2017年11月27日&emsp;&emsp;&emsp;&emsp;预约，抢座中</p>
-                    </li>
-                    <li>
-                        <p class="fs14">2017年11月1日&emsp;&emsp;&emsp;&emsp;爆满已开课</p>
-                    </li>
+					<div class="plan plan3" id="formalClass">
+						<li class="plan-price">
+							<p class="fs14">2018年8月6日&emsp;&emsp;&emsp;&emsp;名额预约中</p>
+						</li>
+						<li>
+							<p class="fs14">2018年7月2日&emsp;&emsp;&emsp;&emsp;试听抢座中</p>
+						</li>
+						<li>
+							<p class="fs14">2018年6月4日&emsp;&emsp;&emsp;&emsp;爆满已开课</p>
+						</li>
+					</div>
                     <li class="plan-action">
                         <a  target=_blank href='http://wpa.qq.com/msgrd?v=3&uin=945618123&site=qq&menu=yes' class="btn btn-transparent">QQ在线预约报名</a>
                     		&emsp;&emsp;<a  target=_blank href='contact-us.html' class="btn btn-transparent">在线客服预约报名</a>
@@ -323,6 +327,7 @@ $(function() {
 			Page.init();
 });
 </script>
+	<script src="js/index.js"></script>
 <!-- /SL Slider -->
 </body>
 </html>
